--- a/lib/components/commentsTextarea/commentsTextarea.html
+++ b/lib/components/commentsTextarea/commentsTextarea.html
@@ -90,5 +90,41 @@
       </div>
     </form>
   {{/if}}
+
+  {{#if templateIs 'foundation' }}
+  <div class="row">
+    <div class="small-1 hz-comment columns">
+      <img alt="Avatar of {{user.displayName}}" class="hz-thumbnail-avatar" src="{{avatarUrl}}" />
+    </div>
+    <div class="small-11  hz-comment columns">
+      <form class="{{#if reply}}reply-form{{else}}comment-form{{/if}}" role="form" action="">
+            <textarea
+                placeholder="{{ take key='placeholder-textarea' default='Write a reply'}}"
+                class="form-control {{#if reply}}create-reply{{else}}create-comment{{/if}} boxsizingBorder" rows="1"></textarea>
+        {{#if showAnonymousInput}}
+          <div class="form-group">
+            <div class="row">
+              <div class="small-6 columns">
+                <input required type="text" class="form-control anon-username" value="{{anonymousData.username}}" placeholder="Your name" />
+              </div>
+              <div class="small-6 columns">
+                <input required type="email" class="form-control anon-email" value="{{anonymousData.email}}" placeholder="Your email" />
+              </div>
+            </div>
+
+            {{#if sweetCaptchaEnabled}}
+              <div class="row">
+                <div class="small-12 columns">
+                    <iframe style="width: 100%; min-height: 180px" frameborder="0" class="sweet-captcha"></iframe>
+                </div>
+              </div>
+            {{/if}}
+          </div>
+        {{/if}}
+        <button type="submit" class="button primary small radius float-right">{{ take key=addButtonKey default=defaultAddButtonText }}</button>
+      </form>
+    </div>
+  </div>
+  {{/if}}
   {{/if}}
 </template>
